name:                helm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/supermario/helm#readme
license:             BSD3
license-file:        LICENSE
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2016 Mario Rogic
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Helm
                     , Helm.Logger
                     , Helm.Logger.StdOut
                     , Helm.Storage
                     , Helm.Storage.TVar
                     , Helm.Socket
                     , Helm.PostgresSimple

  build-depends:       base >= 4.7 && < 5
                       , random
                       , aeson
                       , http-dispatch
                       , bytestring
                       , free
                       , freer
                       , text
                       , websockets
                       , mtl
                       , network
                       , wuss
                       , transformers
                       , stm
                       , managed
                       , postgresql-simple
  default-language:    Haskell2010

executable helm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helm
  default-language:    Haskell2010

test-suite helm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , helm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/helm
