name:                hilt
version:             0.0.0.1
synopsis:            An experimental framework for Haskell + Elm
description:         Please see README.md
homepage:            https://github.com/supermario/hilt#readme
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2016 Mario Rogic
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hilt
                     , Hilt.Config
                     , Hilt.Logger
                     , Hilt.Logger.StdOut
                     , Hilt.Storage
                     , Hilt.Storage.TVar
                     , Hilt.SocketClient
                     , Hilt.SocketServer
                     , Hilt.SocketServer.Stm
                     , Hilt.KeyValueStore
                     , Hilt.KeyValueStore.Cache
                     , Hilt.PostgresSimple
                     , Hilt.Channel
                     , Hilt.Channel.Stm
                     , Hilt.Channel.Unagi
                     , Hilt.Database
                     , Hilt.Database.Postgres

  build-depends:       base >= 4.7 && < 5
                       , random
                       , aeson
                       , http-dispatch
                       , bytestring
                       , text
                       , websockets
                       , mtl
                       , network
                       , wuss
                       , transformers
                       , stm
                       , managed
                       , postgresql-simple
                       , monad-logger
                       , persistent
                       , persistent-sqlite
                       , persistent-postgresql
                       , postgresql-simple
                       , postgresql-simple-url
                       , wai-extra
                       , heroku
                       , heroku-persistent
                       , wai
                       , monad-control
                       , resourcet
                       , slave-thread
                       , unagi-chan
                       , cache

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite hilt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hilt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/hilt
