name:                hilt
version:             0.0.0.1
synopsis:            Application scaffold and batteries-included service implementations for Haskell
description:         Please see README.md
homepage:            https://github.com/supermario/hilt#readme
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2016 Mario Rogic
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hilt

                     , Hilt.SocketClient
                     , Hilt.Channel.Stm

                     , Hilt.Config
                     , Hilt.JSON
                     , Hilt.Server

                     , Hilt.Cache
                     , Hilt.Channel
                     , Hilt.Logger
                     , Hilt.Postgres
                     , Hilt.SocketServer

                     , Hilt.Handles.Cache
                     , Hilt.Handles.Channel
                     , Hilt.Handles.Logger
                     , Hilt.Handles.Postgres
                     , Hilt.Handles.SocketServer

  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , bytestring
                       , cache
                       , heroku
                       , heroku-persistent

                       , http-types
                       , managed
                       , monad-control
                       , monad-logger
                       , mtl
                       , network
                       , persistent
                       , persistent-postgresql
                       , persistent-sqlite
                       , postgresql-simple
                       , postgresql-simple
                       , postgresql-simple-url
                       , random
                       , resourcet
                       , slave-thread
                       , stm
                       , text
                       , time
                       , transformers
                       , unagi-chan
                       , wai
                       , wai-extra
                       , wai-websockets
                       , warp
                       , websockets
                       , wuss

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable hilt-example
  main-is: Main.hs
  build-depends:       base
                     , hilt
                     , text-show

  hs-source-dirs:      app/
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


test-suite hilt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hilt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/hilt
